# rust-halo2-zk-nn

./: .gitignore  Cargo.toml  README.md  eval.py  quantize.py
src/: table.rs  test.rs
